2009-04-04  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
	    Corinna Vinschen  <corinna@vinschen.de>

	* include/asm/byteorder.h (__ntohl): Prototype before define to avoid
	a warning with -Wmissing-prototypes.  Use _ELIDABLE_INLINE macro from
	_ansi.h.
	(__ntohs): Ditto.

2009-04-02  Corinna Vinschen  <corinna@vinschen.de>

	* environ.cc (build_env): Fix length calculation of resulting
	wide char environment string.

2009-04-02  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/netdb.h: #include <inttypes.h>, <netinet/in.h>,
	and <sys/socket.h> per SUSv3.

2009-04-01  Corinna Vinschen  <corinna@vinschen.de>

	* strfuncs.cc (sys_cp_mbstowcs): Check if ASCII SO is followed by at
	least two chars and the next byte is a valid UTF-8 start byte before
	trying to convert the followup bytes as UTF-8 sequence.

2009-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* shm.cc (struct shm_attached_list): Convert access type to ULONG.
	(fixup_shms_after_fork): Fix comment.  Use NtMapViewOfSection rather
	than MapViewOfFileEx to recreate shared memory regions.  Add function
	name to api_fatal output.
	(shmat): Use NtMapViewOfSection to create shared memory region
	top-down.

2009-03-31  Corinna Vinschen  <corinna@vinschen.de>

	* ctype.cc: Remove implementation of ctype functions in favor of
	pointer-based newlib implementation.
	(_ctype_b): Declare.
	(__ctype_cp): Move to newlib. Declare.
	(__ctype_iso): Ditto.
	(__set_ctype): Implement changing __ctype_ptr__.  Only copy character
	class data in applications built under older Cygwin.
	* cygwin.din (__ctype_ptr__): Export.
	* include/ctype.h: Remove in favor of newlib implementation.
	* include/cygwin/config.h (__EXPORT): Define alongside __IMPORT.
	* include/cygwin/version.h (CYGWIN_VERSION_CHECK_FOR_OLD_CTYPE):
	Define check for old vs. new ctype implementation.
	Bump API minor number.

2009-03-28  Christopher Faylor  <me+cygwin@cgf.cx>
